--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "agno>=1.4.6",
+    "flask>=3.1.1",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.7",
     "setuptools>=80.4.0",
